--- a/yangtao-kotlin/app/build.gradle
+++ b/yangtao-kotlin/app/build.gradle
@@ -52,6 +52,8 @@ dependencies {
     implementation 'com.google.ar:core:1.11.0'
     implementation 'com.google.ar.sceneform.ux:sceneform-ux:1.11.0'
     implementation 'com.google.ar.sceneform:core:1.11.0'
+    implementation "org.jetbrains.kotlin:kotlin-reflect:1.3.50"
+    implementation "com.quickbirdstudios:yuvtomat:1.1.0"
 
     implementation project(path: ':opencv-4.1.1')
 
