--- a/yangtao-kotlin/app/build.gradle
+++ b/yangtao-kotlin/app/build.gradle
@@ -13,12 +13,7 @@ android {
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
-        externalNativeBuild {
-            cmake {
-                cppFlags ""
-                arguments '-DANDROID_STL=c++_shared'
-            }
-        }
+
     }
 
     compileOptions {
@@ -32,27 +27,24 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
-
-    sourceSets {
-        main {
-            main.jni.srcDirs = []
-            jniLibs.srcDirs = ['jniLibs']
-        }
-    }
 }
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation "org.jetbrains.kotlin:kotlin-reflect:1.3.50"
+
     implementation 'androidx.appcompat:appcompat:1.0.2'
     implementation 'androidx.core:core-ktx:1.0.2'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+    implementation 'androidx.recyclerview:recyclerview:1.1.0-beta03'
+    implementation 'androidx.cardview:cardview:1.0.0'
+
     implementation 'com.google.android.material:material:1.0.0'
 
     implementation 'com.google.ar:core:1.11.0'
     implementation 'com.google.ar.sceneform.ux:sceneform-ux:1.11.0'
     implementation 'com.google.ar.sceneform:core:1.11.0'
-    implementation "org.jetbrains.kotlin:kotlin-reflect:1.3.50"
 
     implementation "com.quickbirdstudios:yuvtomat:1.1.0"
     implementation 'com.quickbirdstudios:opencv:4.1.0'
