--- a/yangtao-kotlin/app/src/main/AndroidManifest.xml
+++ b/yangtao-kotlin/app/src/main/AndroidManifest.xml
@@ -22,7 +22,7 @@
         tools:ignore="GoogleAppIndexingWarning">
         <activity android:name=".ar.ArActivity"></activity>
         <activity
-            android:name=".MainActivity"
+            android:name=".hanzigrid.HanziGridActivity"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
@@ -31,7 +31,6 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".tutorial.ColorBlobDetectionActivity" />
         <!--
  Indicates that app requires ARCore ("AR Required"). Causes the Google
              Play Store to download and install Google Play Services for AR along
@@ -41,6 +40,9 @@
         <meta-data
             android:name="com.google.ar.core"
             android:value="required" />
+        <meta-data
+            android:name="preloaded_fonts"
+            android:resource="@array/preloaded_fonts" />
     </application>
 
 </manifest>
