--- a/yangtao-kotlin/build.gradle
+++ b/yangtao-kotlin/build.gradle
@@ -27,3 +27,10 @@ allprojects {
 task clean(type: Delete) {
     delete rootProject.buildDir
 }
+
+ext {
+    roomVersion = '2.2.0-beta01'
+    archLifecycleVersion = '2.2.0-alpha03'
+    androidxArchVersion = '2.0.1'
+    coroutines = '1.2.0'
+}
