--- a/yangtao-kotlin/app/build.gradle
+++ b/yangtao-kotlin/app/build.gradle
@@ -33,6 +33,18 @@ android {
         experimental = true
     }
 
+    android {
+        defaultConfig {
+            ndk {
+                abiFilters 'armeabi-v7a', 'arm64-v8a'
+            }
+        }
+
+        aaptOptions {
+            noCompress "tflite"
+            noCompress "lite"
+        }
+    }
 
     packagingOptions {
         exclude 'META-INF/DEPENDENCIES'
@@ -93,6 +105,8 @@ dependencies {
     api "org.jetbrains.kotlinx:kotlinx-coroutines-android:$rootProject.coroutines"
 
     implementation "org.jetbrains.anko:anko-commons:0.10.0"
+
+    implementation 'org.tensorflow:tensorflow-lite:1.14.0'
 
 
 }
