--- a/yangtao-kotlin/app/build.gradle
+++ b/yangtao-kotlin/app/build.gradle
@@ -7,7 +7,7 @@ apply plugin: 'com.google.ar.sceneform.plugin'
 
 android {
     compileSdkVersion 29
-    buildToolsVersion "29.0.1"
+    buildToolsVersion "29.0.2"
     defaultConfig {
         applicationId "com.mrklie.yangtao"
         minSdkVersion 24
@@ -67,11 +67,12 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation "org.jetbrains.kotlin:kotlin-reflect:1.3.50"
 
-    implementation 'androidx.appcompat:appcompat:1.0.2'
-    implementation 'androidx.core:core-ktx:1.0.2'
+    implementation 'androidx.appcompat:appcompat:1.1.0'
+    implementation 'androidx.core:core-ktx:1.1.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
-    implementation 'androidx.recyclerview:recyclerview:1.1.0-beta03'
+    implementation 'androidx.recyclerview:recyclerview:1.1.0-beta04'
     implementation 'androidx.cardview:cardview:1.0.0'
+    implementation 'androidx.preference:preference:1.1.0'
 
     implementation 'com.google.android.material:material:1.0.0'
 
@@ -109,4 +110,11 @@ dependencies {
     implementation 'org.tensorflow:tensorflow-lite:1.14.0'
 
     implementation 'com.opencsv:opencsv:4.5'
+}
+
+250.times {
+    sceneform.asset("sampledata/fbx/hanzi${it}.fbx",
+            'default',
+            "sampledata/models/hanzi${it}.sfa",
+            "src/main/assets/models/hanzi${it}")
 }
