--- a/yangtao-kotlin/app/src/main/AndroidManifest.xml
+++ b/yangtao-kotlin/app/src/main/AndroidManifest.xml
@@ -40,6 +40,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".settings.SettingsActivity" />
         <!--
  Indicates that app requires ARCore ("AR Required"). Causes the Google
              Play Store to download and install Google Play Services for AR along
